src/test/ui/borrowck/borrowck-issue-2657-2.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-issue-2657-2.rs:17:18
   |
LL |         let _b = *y; //~ ERROR cannot move out
   |                  ^^
   |                  |
   |                  cannot move out of borrowed content
   |                  help: consider removing this dereference operator: `y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
